# feministech-bot

./: .gitignore  404.html  README.md  exemplo_config.ini  index.html  mkdocs.yml  pyproject.toml  recomenda.txt  sitemap.xml
.github/workflows/: mkdocs.yml
ambiente/: index.html
botlive/: bot.py  config.py  divulgation.py  one_per_live.py  random_list.py  time_out.py
configuracao/: index.html
docs/: ambiente.md  configuracao.md  index.md  instalacao.md
feministech_bot/: __main__.py  bot.py  config.py  suppress.py
stylesheets/: extra.css
