[tool.poetry]
name = "botlive"
version = "1.0.0"
description = "Este é nosso bot disponível em todos os chats dos canais de pessoas criadoras da comunidade Feministech."
authors = ["bug_elseif <https://github.com/bugelseif>"]

[tool.poetry.dependencies]
python = "^3.9"
twitchio = "~1.2.3"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
botlive = "botlive.bot:run"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
