[tool.poetry]
name = "botlive"
version = "1.0.0"
description = "Este é nosso bot disponível em todos os chats dos canais de pessoas criadoras da comunidade Feministech."
authors = ["bug_elseif <https://github.com/bugelseif>"]
license = "MIT"
readme = "README.md"
packages = [{include = "botlive"}]

[tool.poetry.dependencies]
python = "^3.10"
twitchio = "^2.6.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.9.0"
termynal = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
botlive = "botlive.bot:run"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
