[tool.poetry]
name = "feministech_bot"
version = "1.0.0"
description = "Este é o nosso bot disponível em todos os chats dos canais de pessoas streamers da comunidade Feministech."
authors = ["bug_elseif <https://github.com/bugelseif>"]
license = "MIT"
readme = "README.md"
packages = [{include = "feministech_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.6.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.9.0"
termynal = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "feministech_bot.bot:run"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
